<resources>
    <string name="app_name">AddressBook</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="user_id">User ID</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="add_contact">Add Contact</string>
    <string name="update">Update</string>
</resources>